# pmetal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES  justfile  metrics.jsonl
crates/pmetal/: Cargo.toml  README.md  build.rs
crates/pmetal-bridge/: Cargo.toml  build.rs
crates/pmetal-bridge/benches/: turboquant_qjl_ablation.rs
crates/pmetal-bridge/cmake/: CMakeLists.txt
crates/pmetal-bridge/cpp/: bridge.cpp  bridge.h  bridge_compiled.cpp  bridge_gdn.cpp  bridge_inference.cpp  bridge_internal.h  bridge_native.cpp  bridge_training.cpp  bridge_turboquant.cpp  bridge_turboquant_attn_d128.cpp  bridge_turboquant_attn_d256.cpp  bridge_turboquant_encode.cpp  bridge_turboquant_hamming.cpp  bridge_turboquant_internal.h  bridge_turboquant_pack.cpp  bridge_turboquant_score.cpp  bridge_turboquant_weighted.cpp
crates/pmetal-bridge/examples/: native_qwen35.rs  turboquant_direct_microbench.rs  turboquant_q8_microbench.rs  turboquant_qwen_replay.rs
crates/pmetal-bridge/patches/: slice-output-shapes.patch
crates/pmetal-bridge/src/: compat.rs  decode.rs  deepseek_native.rs  dtype.rs  error.rs  gemma4_native.rs  gpt_oss_native.rs  inline_array.rs  lib.rs  llama4_native.rs  mlx_quant.rs  native_loader.rs  optimizer.rs  qwen3_native.rs  qwen3_train.rs  scalar.rs  training.rs  try_ops.rs  turboquant.rs  turboquant_dispatch.rs
crates/pmetal-bridge/tests/: conv1d_graph.rs  eval_lifetime.rs  full_layer_bench.rs  gdn_ops_profile.rs  native_weights_bench.rs  safetensors_shard_regression.rs  select_axis_regression.rs  simplified_decode.rs  smoke.rs
crates/pmetal-cli/: Cargo.toml  README.md
crates/pmetal-cli/src/: dashboard.rs  main.rs  pack_experts.rs
crates/pmetal-core/: Cargo.toml
crates/pmetal-core-derive/: Cargo.toml
crates/pmetal-core-derive/src/: lib.rs
crates/pmetal-core/src/: config.rs  error.rs  events.rs  fields.rs  lib.rs  scheduler.rs  traits.rs  types.rs
crates/pmetal-data/: Cargo.toml
crates/pmetal-data/src/: chat_templates.rs  dataloader.rs  dataset.rs  image_processing.rs  inference_config.rs  jinja_chat.rs  lib.rs  packing.rs  streaming.rs  tokenizer.rs  vocab_compact.rs
crates/pmetal-data/tests/: chat_template_audit.rs  streaming_test.rs
crates/pmetal-distill/: Cargo.toml  README.md
crates/pmetal-distill/benches/: gpu_losses.rs
crates/pmetal-distill/src/: config.rs  distill.rs  error.rs  lib.rs  offline.rs  reasoning.rs  taid.rs
crates/pmetal-distill/tests/: sota_loss_dispatch.rs
crates/pmetal-distributed/: Cargo.toml  README.md
crates/pmetal-distributed/src/: activation_codec.rs  activation_transport.rs  auto.rs  cloud_bridge.rs  cluster_runtime.rs  collective.rs  compression.rs  config.rs  discovery.rs  error.rs  expert_shard.rs  identity.rs  layer_assignment.rs  lib.rs  metrics.rs  namespace.rs  pipeline.rs  pipeline_harness.rs  ring.rs  solver.rs  topology.rs  transport.rs  ultrafusion.rs
crates/pmetal-distributed/tests/: pipeline_harness_smoke.rs
crates/pmetal-gguf/: Cargo.toml  README.md
crates/pmetal-gguf/src/: config.rs  dequant.rs  dynamic.rs  imatrix.rs  lib.rs  quantize.rs  reader.rs  vec_dot.rs  writer.rs
crates/pmetal-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/pmetal-hub/: Cargo.toml  README.md
crates/pmetal-hub/src/: cache.rs  download.rs  fit.rs  lib.rs  resolve.rs  search.rs  upload.rs
crates/pmetal-lora/: Cargo.toml  README.md
crates/pmetal-lora/benches/: memory_benchmark.rs
crates/pmetal-lora/src/: adapter.rs  arch_config.rs  autograd.rs  cohere_lora.rs  cohere_qlora.rs  custom_autograd_trainer.rs  custom_backward.rs  custom_training.rs  custom_training_step.rs  deepseek_lora.rs  deepseek_qlora.rs  dora.rs  dynamic.rs  dynamic_qlora.rs  fused_training.rs  galore.rs  gemma4_lora.rs  gemma4_qlora.rs  gemma_lora.rs  gemma_qlora.rs  generic_lora.rs  gpt_oss_lora.rs  gpt_oss_qlora.rs  granite_lora.rs  granite_qlora.rs  lib.rs  llama4_lora.rs  llama4_qlora.rs  llama_lora.rs  llama_qlora.rs  lora.rs  lora_helpers.rs  mistral_lora.rs  mistral_qlora.rs  mllama_lora.rs  nemotron_h_lora.rs  nemotron_h_qlora.rs  phi_lora.rs  phi_qlora.rs  qblora.rs  (+8 more)
crates/pmetal-mcp/: Cargo.toml
crates/pmetal-mcp/src/: README.md  jobs.rs  lib.rs  util.rs
crates/pmetal-merge/: Cargo.toml  README.md
crates/pmetal-merge/benches/: merge_benchmarks.rs
crates/pmetal-merge/src/: async_merge.rs  batched.rs  config.rs  consensus.rs  error.rs  fp8_merge.rs  gpu_merge.rs  lib.rs  loader.rs  lora_merge.rs  merge.rs  moe_align.rs  sanity.rs  sparsify.rs
crates/pmetal-merge/tests/: dtype_consistency.rs  full_merge_pipeline.rs  moe_alignment.rs  moe_permutation.rs
crates/pmetal-metal/: Cargo.toml  README.md  build.rs
crates/pmetal-metal/benches/: ane_kernels.rs
crates/pmetal-metal/src/: accelerate.rs  async_scheduler.rs  backend.rs  bridge.rs  buffer.rs  context.rs  dispatch.rs  error.rs  expert_buffer.rs  lib.rs  metal3_backend.rs  neon_convert.rs  pipeline.rs  tuna.rs
crates/pmetal-metal/tests/: ane_training_e2e.rs
crates/pmetal-mhc/: Cargo.toml
crates/pmetal-mhc/benches/: mhc_kernels.rs  sinkhorn.rs
crates/pmetal-mhc/src/: lib.rs  mappings.rs  params.rs  sinkhorn.rs
crates/pmetal-mlx/: Cargo.toml  README.md
crates/pmetal-mlx/src/: array_ext.rs  attention.rs  bridge.rs  error.rs  fp8_quantization.rs  gradient_checkpoint.rs  grouped_gemm_moe.rs  kv_cache.rs  lib.rs  memory.rs  moe.rs  neftune.rs  offloading.rs  prefix_cache.rs  sequence_packing.rs  smart_checkpoint.rs  speculative.rs  test_utils.rs
crates/pmetal-mlx/tests/: training_integration.rs
crates/pmetal-models/: Cargo.toml  README.md
crates/pmetal-models/src/: ddtree.rs  decoder_layer.rs  dflash_decoder.rs  dflash_native_target.rs  dispatcher.rs  expert_dequant.rs  expert_io.rs  expert_layout.rs  expert_prefetch.rs  fp8_utils.rs  generation.rs  lib.rs  loader.rs  moe.rs  moe_routing.rs  ollama.rs  pooling.rs  (+6 more)
crates/pmetal-py/: Cargo.toml  pyproject.toml  stub.py
crates/pmetal-serve/: Cargo.toml  README.md
crates/pmetal-trainer/: Cargo.toml  README.md
crates/pmetal-vocoder/: Cargo.toml  README.md
(+605 files in other folders)
