[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
    "crates/pmetal-core",
    "crates/pmetal-metal",
    "crates/pmetal-mlx",
    "crates/pmetal-models",
    "crates/pmetal-lora",
    "crates/pmetal-data",
    "crates/pmetal-trainer",
    "crates/pmetal-hub",
    "crates/pmetal-gguf",
    "crates/pmetal-vocoder",
    "crates/pmetal-merge",
    "crates/pmetal-distill",
    "crates/pmetal-distributed",
    "crates/pmetal-mhc",
    "crates/pmetal",
    "crates/pmetal-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/epistates/pmetal"
keywords = ["machine-learning", "llm", "fine-tuning", "apple-silicon", "mlx"]
categories = ["science", "algorithms"]

[workspace.dependencies]
# Internal crates
pmetal-core = { path = "crates/pmetal-core", version = "0.1.0" }
pmetal-metal = { path = "crates/pmetal-metal", version = "0.1.0" }
pmetal-mlx = { path = "crates/pmetal-mlx", version = "0.1.0" }
pmetal-models = { path = "crates/pmetal-models", version = "0.1.0" }
pmetal-lora = { path = "crates/pmetal-lora", version = "0.1.0" }
pmetal-data = { path = "crates/pmetal-data", version = "0.1.0" }
pmetal-trainer = { path = "crates/pmetal-trainer", version = "0.1.0" }
pmetal-hub = { path = "crates/pmetal-hub", version = "0.1.0" }
pmetal-gguf = { path = "crates/pmetal-gguf", version = "0.1.0" }
pmetal-cli = { path = "crates/pmetal-cli", version = "0.1.0" }
pmetal-vocoder = { path = "crates/pmetal-vocoder", version = "0.1.0" }
pmetal-merge = { path = "crates/pmetal-merge", version = "0.1.0" }
pmetal-distill = { path = "crates/pmetal-distill", version = "0.1.0" }
pmetal-mhc = { path = "crates/pmetal-mhc", version = "0.1.0" }
pmetal-distributed = { path = "crates/pmetal-distributed", version = "0.1.0" }

# MLX bindings - pmetal-maintained fork (unblocks crates.io publishing)
mlx-rs = { version = "0.25.4", package = "pmetal-mlx-rs", features = ["safetensors"] }
mlx-sys = { version = "=0.2.1", package = "pmetal-mlx-sys" }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "serde_yaml_ng", version = "0.10" }

# Error handling
thiserror = "2"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Data formats
safetensors = "0.7"
arrow = "58"
parquet = "58"
arrow-array = "58"
arrow-json = "58"

# HuggingFace integration
hf-hub = "0.5"
tokenizers = "0.22"
reqwest = { version = "0.13", features = ["json", "multipart", "stream", "rustls"] }
sha2 = "0.10"
base64 = "0.22"

# Serialization (binary)
bitcode = { version = "0.6", features = ["serde"] }

# Metal bindings (modern objc2 ecosystem)
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSError", "NSString"] }
objc2-metal = { version = "0.3", features = [
    "MTLDevice", "MTLCommandQueue", "MTLCommandBuffer", "MTLCommandEncoder",
    "MTLComputeCommandEncoder", "MTLComputePipeline", "MTLLibrary",
    "MTLBuffer", "MTLResource", "MTLEvent", "MTLFence",
] }
dispatch2 = "0.3"
block2 = "0.6"

# Utilities
bytemuck = { version = "1", features = ["derive"] }
half = { version = "2", features = ["bytemuck"] }
num-traits = "0.2"
ndarray = { version = "0.17", features = ["rayon"] }
rand = "0.10"
indicatif = "0.18"
humansize = "2"
dirs = "6"
walkdir = "2"
memmap2 = "0.9"

# Testing
criterion = "0.8"
tempfile = "3"
proptest = "1.5"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

