[package]
name = "pmetal-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Zero-allocation MLX bridge — standalone C++ layer that replaces mlx-rs"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
links = "pmetal_bridge"

[features]
default = ["accelerate", "metal"]
accelerate = []
metal = []

[dependencies]
half = { workspace = true }
memmap2 = "0.9"
libc = "0.2"
safetensors = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"

[dev-dependencies]

[build-dependencies]
cc = "1"
cmake = "0.1"
