[package]
name = "pmetal-cli"
description = "Command-line interface for PMetal LLM fine-tuning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "pmetal"
path = "src/main.rs"

[dependencies]
pmetal-core = { workspace = true }
pmetal-mlx = { workspace = true }
pmetal-models = { workspace = true }
pmetal-lora = { workspace = true }
pmetal-data = { workspace = true }
pmetal-hub = { workspace = true }
pmetal-gguf = { workspace = true }
pmetal-trainer = { workspace = true }
pmetal-distill = { workspace = true }
mlx-rs = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
chrono = "0.4"
parquet = { workspace = true, features = ["arrow"] }
arrow-array = { workspace = true }
arrow-json = { workspace = true }
rand = { workspace = true }
regex = "1"
tempfile = { workspace = true }
tokenizers = { workspace = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[features]
default = []
ane = ["pmetal-trainer/ane", "pmetal-models/ane"]
dashboard = ["dep:ratatui", "dep:crossterm"]

[lints]
workspace = true
