[package]
name = "pmetal-data"
description = "Dataset handling and preprocessing for PMetal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pmetal-core = { workspace = true }
mlx-rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
tokenizers = { workspace = true }
rand = { workspace = true }
image = "0.25"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
