[package]
name = "pmetal-data"
description = "Dataset handling and preprocessing for PMetal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pmetal-core = { workspace = true }
pmetal-bridge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
tokenizers = { workspace = true }
minijinja = { workspace = true }
minijinja-contrib = { workspace = true }
# `time` is already pulled in transitively by minijinja-contrib; depending
# on it directly lets us format "now" for the Llama 3 `strftime_now` shim.
time = { version = "0.3", features = ["formatting", "macros"] }
memmap2 = { workspace = true }
rand = { workspace = true }
rayon = "1"
image = "0.25"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
