[package]
name = "pmetal-distill"
description = "Knowledge distillation toolkit for PMetal - KL divergence, hidden state alignment, and offline distillation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["metal"]
metal = ["pmetal-metal"]

[dependencies]
pmetal-core = { workspace = true }
pmetal-mlx = { workspace = true }
pmetal-metal = { workspace = true, optional = true }
mlx-rs = { workspace = true }
mlx-sys = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indicatif = { workspace = true }
half = { workspace = true }
bytemuck = { workspace = true }
hf-hub = { workspace = true }
bitcode = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
serial_test = "3"

[[bench]]
name = "gpu_losses"
harness = false

[lints]
workspace = true
