[package]
name = "pmetal-distributed"
version.workspace = true
edition.workspace = true
description = "Distributed training and inference backend for PMetal (Home Clusters)"
license.workspace = true
repository.workspace = true

[features]
default = []
# MLX distributed C API wrappers (JACCL/Ring/RDMA backends)
mlx-collectives = ["dep:pmetal-bridge"]
# Weight sharding, distributed linear layers
tensor-parallel = ["mlx-collectives"]
# MoE expert dispatch across nodes
expert-parallel = ["mlx-collectives"]
# Ring attention, KV cache sharding
context-parallel = ["mlx-collectives"]
# ZeRO optimizer state/gradient sharding (pure Rust, no MLX dep)
zero = []
# 1F1B and zero-bubble pipeline training schedules (pure Rust)
pipeline-training = []
# Enable all distributed capabilities
full = ["mlx-collectives", "tensor-parallel", "expert-parallel", "context-parallel", "zero", "pipeline-training"]

[dependencies]
# Use workspace versions for consistency
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bitcode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async utilities
futures = "0.3"
bytes = "1.5"
async-trait = "0.1"
zerocopy = { workspace = true }

# Peer discovery and networking (libp2p stack)
libp2p = { version = "0.56", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "gossipsub",
    "identify",
    "ping",
    "macros",
    "ed25519",
    "serde",
] }

# Topology graph
petgraph = "0.8"

# Utilities
dirs = { workspace = true }
sha3 = "0.10"
bs58 = "0.5"
rand = { workspace = true }
parking_lot = "0.12"
half = { workspace = true }
ordered-float = "5"

# MLX bridge (optional — gated behind mlx-collectives feature)
pmetal-bridge = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
