[package]
name = "pmetal-gguf"
description = "GGUF file format implementation for PMetal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pmetal-core = { workspace = true }
byteorder = "1.5"
half = { workspace = true }
serde_json = { workspace = true }
zerocopy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
