[package]
name = "pmetal-hub"
description = "HuggingFace Hub integration for PMetal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pmetal-core = { workspace = true }
hf-hub = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indicatif = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
urlencoding = "2"

[lints]
workspace = true
