[package]
name = "pmetal-merge"
description = "Model merging toolkit for PMetal - SLERP, TIES, DARE, and more"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
pmetal-core = { workspace = true }
pmetal-mlx = { workspace = true }
pmetal-bridge = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
hf-hub = { workspace = true }
half = { workspace = true }
zerocopy = { workspace = true }
memmap2 = { workspace = true }
ndarray = { workspace = true }
regex = "1"

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "merge_benchmarks"
harness = false

[lints]
workspace = true
