[package]
name = "pmetal-metal"
description = "Metal GPU compute kernels for PMetal - FlashAttention and optimized ML primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[dependencies]
# Internal crates
pmetal-core = { workspace = true }

# Metal bindings (modern objc2 ecosystem)
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-metal = { workspace = true }
dispatch2 = { workspace = true }
block2 = { workspace = true }

# Numeric types
half = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Synchronization
parking_lot = "0.12"

[build-dependencies]
cc = "1"

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true

# Benchmarks will be added later
# [[bench]]
# name = "flash_attention"
# harness = false
