[package]
name = "pmetal-metal"
description = "Metal GPU compute kernels for PMetal - FlashAttention and optimized ML primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "build.rs"

[features]
default = ["ane"]
ane = ["pmetal-core/ane", "dep:rand", "dep:safetensors", "dep:memmap2"]

[dependencies]
# Internal crates
pmetal-core = { workspace = true }

# Metal bindings (modern objc2 ecosystem)
objc2 = { workspace = true }
objc2-foundation = { workspace = true }
objc2-metal = { workspace = true }
dispatch2 = { workspace = true }
block2 = { workspace = true }

# Numeric types
half = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Serialization (for persistent disk cache)
serde = { workspace = true }
serde_json = { workspace = true }

# Directory resolution (for ~/.cache path)
dirs = { workspace = true }

# Sampling (optional, for ANE inference)
rand = { workspace = true, optional = true }

# SafeTensors loading (optional, for ANE inference)
safetensors = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }

# Synchronization
parking_lot = "0.12"

[build-dependencies]
cc = "1"

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

# Benchmarks will be added later
# [[bench]]
# name = "flash_attention"
# harness = false
