[package]
name = "pmetal-mhc"
version.workspace = true
edition.workspace = true
description = "Manifold-Constrained Hyper-Connections (mHC) for stable deep network training"
license.workspace = true
repository.workspace = true
keywords = ["deep-learning", "transformer", "residual-connections", "training"]
categories = ["science", "mathematics"]

[dependencies]
# Core - use workspace references
pmetal-core = { workspace = true }
pmetal-metal = { workspace = true, optional = true }

# Math
ndarray = { workspace = true, features = ["serde"] }
num-traits = "0.2"

# Async - use workspace
tokio = { workspace = true }

# Concurrency
parking_lot = "0.12"

# Serialization - use workspace
serde = { workspace = true }

# Logging - use workspace
tracing = { workspace = true }

# Error handling - use workspace
thiserror = { workspace = true }

# Random (for initialization)
rand = { workspace = true }
rand_distr = "0.6"

# Metal (optional, using modern objc2 ecosystem)
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true, features = ["NSData", "NSError", "NSString"] }
objc2-metal = { version = "0.3", optional = true, features = [
    "MTLDevice", "MTLCommandQueue", "MTLCommandBuffer", "MTLCommandEncoder",
    "MTLComputeCommandEncoder", "MTLComputePipeline", "MTLLibrary",
    "MTLBuffer", "MTLResource",
] }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
approx = "0.5"
proptest = { workspace = true }

[[bench]]
name = "sinkhorn"
harness = false

[[bench]]
name = "mhc_kernels"
harness = false

[features]
default = ["metal"]
# Enable Metal GPU acceleration for Apple Silicon (macOS)
metal = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-metal", "pmetal-metal"]
# Enable CUDA backend for NVIDIA GPUs (future)
cuda = []
