[package]
name = "pmetal-mlx"
description = "MLX backend implementation for PMetal LLM fine-tuning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pmetal-core = { workspace = true }
pmetal-metal = { workspace = true }
mlx-rs = { workspace = true }
mlx-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }
half = { workspace = true }

[dev-dependencies]
serial_test = "3"

[lints]
workspace = true
