[package]
name = "pmetal-models"
description = "LLM model architectures for PMetal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pmetal-core = { workspace = true }
pmetal-gguf = { workspace = true }
pmetal-metal = { workspace = true }
pmetal-mlx = { workspace = true }
mlx-rs = { workspace = true }
mlx-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
safetensors = { workspace = true }
json5 = "1.3.0"

# Metal dependencies (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { workspace = true }
objc2-metal = { workspace = true }

[dev-dependencies]
serial_test = "3.2"

[features]
default = []
ane = ["pmetal-metal/ane", "pmetal-core/ane"]

[lints]
workspace = true
